Changes for 1.8.3

 - [ZBX-2474,ZBXNEXT-378] fixed page refresh on filter change, now all filters hiding and showing works without refresh (Maxim Andruhovich / AM)
 - [ZBX-2488] changed filter from Web Monitoring to External Check (Maxim Andruhovich / AM)
 - [ZBX-2483] fixed showing latest data by filter when clicking from dashboard with GUI option 'Dropdown first entry' -> None (Maxim Andruhovich/AM)
 - [ZBX-1529] fixed macros expand to nothing in templates (Vedmak)
 - [ZBX-2461] fixed complex bugs with trigger expressions (Maxim Andruhovich / AM)
 - [ZBX-1357] updated German translation; thanks to Peter Schultz (Richlv)
 - [ZBX-2319] fixed escaping locales on download (Aly)
 - [ZBX-2460] fixed auto adding host group to updated host (Aly)
 - [ZBX-2367] improved using DISTINCT rule in queries in API (Aly) 
 - [ZBX-2408] fixed mute button in status of triggers page (Aly)
 - [ZBX-2477] fixed dynamic graphs disappear from screens (Vedmak)
 - [ZBX-1346] clarify some parameter values in the example configuration files (Richlv)
 - [ZBX-2471] fix location of the space in a translatable string (Richlv)
 - [ZBX-954] fix Hungarian language name (Richlv)
 - [ZBX-2457] change 'type' keyword to 'ENGINE' for table creation in MySQL schema (Richlv)
 - [ZBX-2466] fixed item filter form (Vedmak)
 - [ZBX-1607] now trigger line is visible in all Zabbix themes in all states and severity in corresponding severity colour mixed with opposite color which stored in defines in hex (Maxim Andruhovich / AM)
 - [ZBX-2105] fixed acknowledging events from dashboard for different nodes (Aly)
 - [ZBX-2441] fixed handling of begin/commit/rollback statements with temporarily unavailable SQL server (Sasha)
 - [ZBX-2432] fixed warning message in templates when template has linked templates (Maxim Andruhovich / AM)
 - [ZBX-2325] improved groups/hosts selecting for filter dropdowns (Vedmak)
 - [ZBX-2433] fixed time not updated on slides when now is selected (Vedmak)